K8S /bluegreen/bg-services.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-active
  namespace: default
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-preview
  namespace: default
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
