K8S /bluegreen/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
   # - host: myapp.example.com
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-active   # Always points to ACTIVE service
                port:
                  number: 80
